[package]
name = "kubrow_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.11"
axum-macros = "0.3.8"
chrono = { version = "0.4.24", features = ["serde"] }
lzma-rs = "0.3.0"
regex = "1.9.1"
reqwest = "0.11.18"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
sha2 = "0.10.7"
tokio = { version = "1.26.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors"] }
uuid = { version = "1.3.0", features = ["v4","serde"] }
